# emcache

./: .gitignore  Cargo.toml  Dockerfile  Justfile  README.md  config-ci.yaml  config.toml  config.toml.template  config.yaml  design.md  docker-compose.yml  go.mod  go.sum
.github/workflows/: ci.yml
.sqlx/: query-00611d825590eac6e8b09906dffbb8ecd3dfbae5b923eb0c2187c2b9bc340118.json  query-0237f4ac374e70632df96cecce5f77010daf87fccfc38f2134917eacc4d83e78.json  query-0985b33a3de1689870b57f30dd5d051cfcf2e7ec7a77d31957b5e00dd84915d2.json  query-16dcc7e13e62c7273f0aeafdde351a3bb39c8802f32804d2837ef37cf18b3784.json  query-3cd54f61cbe84f098f65364365db9daa650d1b85f9856d1e2be5488ee397a51c.json  query-3f6b1fe7eb83d2dda2452c082da915afa4d8ab6a333c4db74ecf0b85045d5f6a.json  query-5ad9452e4bbc260b0a03a704644fbcc022614f9db50a33554d70bead1cd298cb.json  query-5b653fe8e61481f92373f6697c024c9316ca1d9cea5ee32d11fc2a3015ccadad.json  query-6317d7ad1486ed80e101cb4e37ca00438aa38ec00f200a74ac0e6e0bf4200f81.json  query-74dcffeaea36fbfc38406f974ad2c97b56280d2d5b4fbdddc13a9991257753a1.json  query-7ef006ed9fd9d1df193ca6c8392aeca7f6ec183e08ed8fba090480f77e5f673e.json  query-8afa0d764e729ac18610aeb3d3d1c6990627f35d7c3bf8946227ba2a6783425d.json  query-95fa88ee396f9a8710a69f27d4f04133bfc5e7c279915b613a084117dfad017b.json  query-b6664331ca9dad89b6d6e30cc0b3465141652cefd8ba5becbbb639c288bc7244.json
caches/: metadata.db
client/: client.go
clients/go/: adapters.go  client.go  client_test.go  decompress.go  go.mod  go.sum  sqlite.go  zstd.go
cmd/server/: main.go
internal/collectioncache/: cache.go  cache_test.go  interfaces.go
internal/config/: config.go  config_test.go
internal/coordinator/: coordinator.go  coordinator_test.go  interfaces.go
internal/db/: db.go  interfaces.go  postgres.go  postgres_impl.go
internal/follower/: central.go  follower.go  follower_test.go  interfaces.go  sqlite_helpers.go
internal/grpcapi/: compress.go  compress_test.go  interfaces.go  server.go  server_test.go
internal/leader/: changestream.go  changestream_test.go  interfaces.go  leader.go  leader_test.go
internal/manager/: interfaces.go  manager.go  manager_test.go
internal/migrations/: migrations.go
internal/shape/: shape.go  shape_test.go
internal/snapshot/: interfaces.go  snapshot.go
migrations/: 001_initial_schema.sql
pkg/client/: adapters.go  client.go  client_test.go  decompress.go  interfaces.go  sqlite.go
pkg/protos/: emcache.pb.go  emcache.proto  emcache_grpc.pb.go
src/: cache_db_manager.rs  cache_replicator.rs  config.rs  database.rs  database_cleanup_job.rs  entity_manager.rs  executor.rs  init.rs  job_server.rs  main.rs  mongo_client.rs  monitoring.rs  resume_token_manager.rs  types.rs  utils.rs
src/api/: entities.rs  health.rs  mod.rs  oplogs.rs  replication.rs  snapshot.rs  system.rs  with_rejection.rs
src/entity/: database.rs  mod.rs
src/mongo/: mod.rs  resume_token.rs  shaper.rs
src/oplog/: cleanup.rs  database.rs  manager.rs  mod.rs  processor.rs
tests/: config.yaml  docker-compose.yml  helper.go  sync_test.go
(+26 files in other folders)
