[package]
name = "emcache"
version = "0.1.0"
edition = "2024"

[package.metadata.sqlx]
offline = true

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
config = "0.15"
dashmap = "6.1"
deadpool-postgres = "0.14"
futures = "0.3"
futures-batch = "0.6"
mongodb = "3.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = [
  "chrono",
  "json",
  "migrate",
  "postgres",
  "runtime-tokio-rustls",
  "sqlite",
] }
tempfile = "3.20"
thiserror = "2.0"
tokio = { version = "1.46", features = ["full"] }
tokio-stream = "0.1"
tokio-util = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
